# src/swagger/swagger-output.json
@@ -11,20 +11,6 @@
     "http"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "tags": [
-          "Users"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/status": {
       "get": {
         "tags": [
@@ -40,7 +26,7 @@
         }
       }
     },
-    "/apps": {
+    "/": {
       "get": {
         "tags": [
           "apps"
